# GamePlate

./: .gitignore  CMakeLists.txt  README.md  conf.ini  conf.txt  functions.h  main.c  power4.c  power4.h
headers/: Entity.h  math.h  renderer.h
headers/Checker/: Checker.h  Constructor.h  Highlighter.h  bases.h  checkerGame.h  interface.h  mainChecker.h
headers/Tic-Tac-Toe/: Game.h  Logic.h  Rendering.h
headers/base/: window.h
sources/Checker/: Checker.c  Constructor.c  bases.c  checkerGame.c  interface.c  mainChecker  mainChecker.c
sources/Tic-Tac-Toe/: Game.c  Logic.c  Rendering.c  choix.c  conf_pion.c
sources/base/: window.c
